# wasm-bindgen-wry

./: .gitignore  .gitmodules  Cargo.toml  README.md  STUBS.md  agents.md  automated-fix-tests.sh  build.rs  diff-api.sh
.github/workflows/: main.yml
benches/: batching.rs  main.rs  roundtrip.rs
dioxus-web-testing/: Cargo.toml
examples/: canvas.rs  dom.rs
examples/dioxus-web/: Cargo.toml
examples/gloo/: Cargo.toml
examples/openstreetmap/: Cargo.toml
examples/piet/: Cargo.toml
examples/tiptap/: Cargo.toml
examples/yew/: Cargo.toml
gloo-testing/: Cargo.toml
gloo-testing/src/: main.rs
leptos-testing/: Cargo.toml
leptos-testing/src/: main.rs
shims/wasm-bindgen/: Cargo.toml
shims/wasm-bindgen-macro/: Cargo.toml
src/: bindings.rs  encoder.rs  home.rs  ipc.rs  lib.rs  main.rs  webview.rs  wry_bindgen.rs
src/js/: hash.txt  heap.js  main.js
src/ts/: encoding.ts  function_registry.ts  heap.ts  ipc.ts  main.ts  rust_exports.ts  rust_function.ts  types.ts
tests/main_thread_tests/: add_number_js.rs  async_bindings.rs  borrow_stack.rs  callbacks.rs  catch_attribute.rs  (+9 more)
wry-bindgen/: Cargo.toml  build.rs
wry-bindgen-macro/: Cargo.toml
wry-bindgen-macro-support/: Cargo.toml
wry-bindgen/src/: batch.rs  cast.rs  convert.rs  encode.rs  function.rs  function_registry.rs  ipc.rs  js_helpers.rs  lazy.rs  lib.rs  object_store.rs  runtime.rs  value.rs  wry.rs
wry-bindgen/src/js/: convert.js  hash.txt  main.js
wry-bindgen/src/ts/: convert.ts  heap.ts  ipc.ts  rust_exports.ts  rust_function.ts
wry-launch/: Cargo.toml
yew-testing/: Cargo.toml
(+9 files in other folders)
