[package]
name = "wasm-bindgen"
version = "0.2.106"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
base64 = "0.22"
bytemuck = "1.14"
inventory = "0.3.21"
once_cell = "1.19"
slotmap = { version = "1.0" }
wry-bindgen-macro = { path = "../wry-bindgen-macro" }

[build-dependencies]
lazy-js-bundle = { git = "https://github.com/DioxusLabs/dioxus" }
