[package]
name = "wasm-bindgen-x"
version = "0.2.106"
edition = "2024"
description = "Shim crate that re-exports either wry-bindgen-core (desktop) or wasm-bindgen (wasm32)"

[features]
default = ["std"]
std = []
enable-interning = []
msrv = []

[dependencies]
wasm-bindgen-macro = { path = "../wasm-bindgen-macro", package = "wasm-bindgen-macro-x" }

# Desktop implementation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wry-bindgen = { path = "../../wry-bindgen" }

# wasm32 implementation
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"

[lints]
workspace = true
